--- a/index.html
+++ b/index.html
@@ -4,112 +4,130 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Activate Education</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="container">
-      <a href="#hero" class="logo">Activate Education</a>
-      <button class="nav-toggle" aria-label="Menu">☰</button>
-      <nav class="site-nav">
-        <a href="#hero">Home</a>
-        <a href="#services">Services</a>
-        <a href="#stats">Our Impact</a>
-        <a href="#testimonials">Testimonials</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <button class="theme-toggle" aria-label="Toggle Dark Mode">🌙</button>
-    </div>
-  </header>
+<header class="site-header">
+  <div class="container">
+    <a href="#hero" class="logo">Activate<span>Education</span></a>
+
+    <nav class="site-nav" id="nav">
+      <a href="#hero">Home</a>
+      <a href="#services">Services</a>
+      <a href="#stats">Impact</a>
+      <a href="#testimonials">Testimonials</a>
+      <a href="#contact">Contact</a>
+    </nav>
+
+    <button id="themeToggle" aria-label="Toggle dark mode"></button>
+    <button class="hamburger" id="hamburger" aria-label="Menu"><span></span></button>
+  </div>
+</header>
+
+<main>
 
   <!-- HERO -->
   <section id="hero" class="hero">
-    <div class="hero-content container">
-      <h1>Unlock Your Child’s <span id="typewriter"></span></h1>
+    <div class="gradient"></div>
+    <div class="container hero-inner">
+      <h1><span>Unlock</span> Your Child’s <strong id="tw"></strong></h1>
       <p>Expert tutoring &amp; courses for every grade and exam.</p>
-      <a href="#services" class="btn">Explore Services →</a>
+      <a href="#services" class="btn primary">Explore Services →</a>
     </div>
   </section>
 
   <!-- SERVICES -->
   <section id="services" class="services container">
-    <h2>Our Services</h2>
-    <div class="grid">
-      <div class="card">
-        <img src="images/testprep.png" alt="" loading="lazy"/>
-        <h3>Activate College Test Prep</h3>
-        <p>Boost PSAT/SAT/ACT scores with experts.</p>
-        <button class="btn-secondary">Book Now</button>
-      </div>
-      <div class="card">
-        <img src="images/activelearning.png" alt="" loading="lazy"/>
+    <h2 class="section-title">Our Services</h2>
+    <div class="card-grid">
+
+      <article class="card tilt">
+        <img src="images/testprep.png" alt="">
+        <h3>College Test Prep</h3>
+        <p>Boost PSAT / SAT / ACT scores with experts.</p>
+        <a href="#contact" class="btn ghost">Book Now</a>
+      </article>
+
+      <article class="card tilt">
+        <img src="images/activelearning.png" alt="">
         <h3>Active Learning</h3>
         <p>Fun after-school and weekend sessions.</p>
-        <button class="btn-secondary">Book Now</button>
-      </div>
-      <div class="card">
-        <img src="images/middle school.png" alt="" loading="lazy"/>
+        <a href="#contact" class="btn ghost">Book Now</a>
+      </article>
+
+      <article class="card tilt">
+        <img src="images/middle school.png" alt="">
         <h3>Middle School Specialized</h3>
         <p>Regents &amp; TACHS prep for grades 6–8.</p>
-        <button class="btn-secondary">Book Now</button>
-      </div>
-      <div class="card">
-        <img src="images/highschool.png" alt="" loading="lazy"/>
+        <a href="#contact" class="btn ghost">Book Now</a>
+      </article>
+
+      <article class="card tilt">
+        <img src="images/highschool.png" alt="">
         <h3>Standard High School</h3>
         <p>One-on-one tutoring &amp; Regents prep.</p>
-        <button class="btn-secondary">Book Now</button>
-      </div>
+        <a href="#contact" class="btn ghost">Book Now</a>
+      </article>
     </div>
   </section>
 
-  <!-- STATS -->
-  <section id="stats" class="stats container">
-    <h2>Our Impact</h2>
-    <div class="counters">
-      <div class="counter"><span data-target="500" data-suffix="+">0</span><p>Students Tutored</p></div>
-      <div class="counter"><span data-target="150" data-suffix="%">0</span><p>Average Score Gain</p></div>
-      <div class="counter"><span data-target="1200" data-suffix="">0</span><p>Sessions Delivered</p></div>
+  <!-- IMPACT -->
+  <section id="stats" class="stats">
+    <div class="container">
+      <h2 class="section-title">Our Impact</h2>
+      <div class="counters">
+        <div class="counter"><span data-target="500" data-suffix="+">0</span><p>Students Tutored</p></div>
+        <div class="counter"><span data-target="150" data-suffix="%">0</span><p>Average Score Gain</p></div>
+        <div class="counter"><span data-target="1200">0</span><p>Sessions Delivered</p></div>
+      </div>
     </div>
   </section>
 
   <!-- TESTIMONIALS -->
-  <section id="testimonials" class="testimonials container">
-    <h2>What Parents Say</h2>
-    <div class="carousel">
-      <div class="testimonial"><p>“My SAT score jumped 300 points!”</p><cite>— Alex P.</cite></div>
-      <div class="testimonial"><p>“Workshops were so engaging!”</p><cite>— Jamie L.</cite></div>
-      <div class="testimonial"><p>“Life-changing tutoring!”</p><cite>— Maria S.</cite></div>
-    </div>
-    <div class="controls">
-      <button id="prev">‹</button><button id="next">›</button>
+  <section id="testimonials" class="testimonials">
+    <h2 class="section-title">What Parents Say</h2>
+    <div class="swiper" id="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><blockquote>“My SAT score jumped 300 points!”<cite> — Alex P.</cite></blockquote></div>
+        <div class="swiper-slide"><blockquote>“Workshops were so engaging!”<cite> — Jamie L.</cite></blockquote></div>
+        <div class="swiper-slide"><blockquote>“Life-changing tutoring!”<cite> — Maria S.</cite></blockquote></div>
+      </div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
   </section>
 
   <!-- CONTACT -->
   <section id="contact" class="contact container">
-    <h2>Get in Touch</h2>
-    <form id="contact-form">
-      <div class="form-group">
-        <input type="text" placeholder="Name" required />
-        <small class="error-msg">Please enter your name.</small>
+    <h2 class="section-title">Get in Touch</h2>
+    <form id="contact-form" novalidate>
+      <div class="floating">
+        <input type="text" id="name" required>
+        <label for="name">Name</label>
       </div>
-      <div class="form-group">
-        <input type="email" placeholder="Email" required />
-        <small class="error-msg">Please enter a valid email.</small>
+      <div class="floating">
+        <input type="email" id="email" required>
+        <label for="email">Email</label>
       </div>
-      <div class="form-group">
-        <textarea placeholder="Message" rows="4" required></textarea>
-        <small class="error-msg">Message cannot be blank.</small>
+      <div class="floating">
+        <textarea id="msg" rows="4" required></textarea>
+        <label for="msg">Message</label>
       </div>
-      <button type="submit" class="btn">Send Message</button>
+      <button class="btn primary">Send Message</button>
     </form>
   </section>
 
-  <!-- BACK TO TOP -->
-  <button class="back-to-top" aria-label="Back to top">↑</button>
+</main>
 
-  <script src="script.js"></script>
+<button id="topBtn" aria-label="Back to top">↑</button>
+
+<script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+<script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+<script src="https://unpkg.com/vanilla-tilt"></script>
+<script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
