--- a/stories.html
+++ b/stories.html
@@ -85,9 +85,9 @@
     <div class="container footer-inner">
       <p>© 2025 Activate Education. All rights reserved.</p>
       <ul class="socials">
-        <li><a href="#" aria-label="Twitter">🐦</a></li>
-        <li><a href="#" aria-label="Facebook">📘</a></li>
-        <li><a href="#" aria-label="Instagram">📸</a></li>
+        <li><a href="#"><img src="images/X_logo.png"        alt="X (Twitter)"></a></li>
+        <li><a href="#"><img src="images/Facebook_Logo_(2019).png" alt="Facebook"></a></li>
+        <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
       </ul>
     </div>
   </footer>
