--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     </video>
     <div class="container hero-inner">
       <h1 class="headline">
-        Unlock <span class="gradient-text">limitless</span><br />
-        learning&nbsp;power.
+        Unlock <span class="gradient-text" id="typewriter"></span>.
       </h1>
       <p class="subhead">
         Personalised tutoring &amp; immersive courses<br />
