--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
   <!-- Header -->
   <header class="glass-nav">
     <div class="nav-wrap">
-      <a class="brand" href="index.html">Activate<span>Edu</span></a>
+      <a class="brand" href="index.html">Activate<span>Ed</span></a>
       <nav class="desktop-nav" id="mainNav">
         <a href="index.html">Home</a>
         <a href="services.html" class="active">Services</a>
