--- a/index.html
+++ b/index.html
@@ -2,170 +2,127 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Activate Education — Unlock Potential</title>
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap" rel="stylesheet" />
-
-  <!-- Swiper styles -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css" />
-
-  <!-- Main stylesheet -->
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>ActivateEd</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Header -->
+  <!-- NAVIGATION -->
   <header class="glass-nav">
-    <div class="nav-wrap">
-      <a class="brand" href="index.html">Activate<span>Ed</span></a>
-      <nav class="desktop-nav" id="mainNav">
+    <div class="nav-wrap container">
+      <a href="index.html" class="brand">Activate<span>Ed</span></a>
+      <button id="burger" aria-label="Menu"><span></span></button>
+      <nav id="mainNav" class="desktop-nav">
         <a href="index.html" class="active">Home</a>
         <a href="services.html">Services</a>
         <a href="impact.html">Impact</a>
         <a href="stories.html">Stories</a>
         <a href="contact.html">Contact</a>
       </nav>
-      <button id="themeToggle" aria-label="theme"></button>
-      <button id="burger" aria-label="Menu"><span></span></button>
+      <button id="themeToggle" aria-label="Toggle Dark Mode">🌙</button>
     </div>
   </header>
 
-  <!-- Hero -->
-  <section id="top" class="hero">
-    <video class="hero-video"
-           src="https://cdn.coverr.co/videos/coverr-boy-reading-at-home-8018/1080p.mp4"
-           autoplay muted loop playsinline>
-    </video>
-    <div class="container hero-inner">
-      <h1 class="headline">
-        Unlock <span class="gradient-text" id="typewriter"></span>.
-      </h1>
-      <p class="subhead">
-        Personalised tutoring &amp; immersive courses<br />
-        for every grade and every goal.
-      </p>
-      <a href="services.html" class="btn primary large">Browse programs</a>
-    </div>
-  </section>
-
-  <!-- Services Preview -->
-  <section class="section">
-    <div class="container">
-      <h2 class="section-title">Signature Programs</h2>
-      <div class="grid cards">
-        <article class="card pop reveal">
-          <img src="images/testprep.png" alt="Test Prep">
-          <h3>Elite Test Prep</h3>
-          <p>PSAT · SAT · ACT</p>
-          <a class="arrow-link" href="services.html#testprep">Learn more →</a>
-        </article>
-        <article class="card pop reveal">
-          <img src="images/activelearning.png" alt="Active Learning">
-          <h3>Active Learning Labs</h3>
-          <p>STEM · Literacy · Arts</p>
-          <a class="arrow-link" href="services.html#activelearning">Learn more →</a>
-        </article>
-        <article class="card pop reveal">
-          <img src="images/middle school.png" alt="Middle School">
-          <h3>Middle-School Mastery</h3>
-          <p>Regents · TACHS</p>
-          <a class="arrow-link" href="services.html#middleschool">Learn more →</a>
-        </article>
-        <article class="card pop reveal">
-          <img src="images/highschool.png" alt="High School">
-          <h3>High-School Success</h3>
-          <p>One-to-One Coaching</p>
-          <a class="arrow-link" href="services.html#highschool">Learn more →</a>
-        </article>
-      </div>
-      <div class="text-center" style="margin-top:2rem;">
-        <a href="services.html" class="btn ghost">View All Programs</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Impact Preview -->
-  <section class="section metrics">
-    <div class="container">
-      <h2 class="section-title">Measured Impact</h2>
-      <ul class="metric-grid">
-        <li class="reveal"><span data-count="780">0</span><small>Students<br />Empowered</small></li>
-        <li class="reveal"><span data-count="172">0</span><small>Avg Score<br />Increase (pts)</small></li>
-        <li class="reveal"><span data-count="1800">0</span><small>Sessions<br />Delivered</small></li>
-      </ul>
-      <div class="text-center" style="margin-top:2rem;">
-        <a href="impact.html" class="btn ghost">See Full Impact Report</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Testimonials Preview -->
-  <section class="section testimonials">
-    <div class="container">
-      <h2 class="section-title">Parent Stories</h2>
-      <div class="swiper" id="testimonialSwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <blockquote>
-              “Our daughter’s confidence—and her math grade—skyrocketed in one term.”
-              <cite>— Ella & Marcus R.</cite>
-            </blockquote>
-          </div>
-          <div class="swiper-slide">
-            <blockquote>
-              “300‑point SAT gain. Full‑ride scholarship. Enough said.”
-              <cite>— Sonya K.</cite>
-            </blockquote>
-          </div>
-          <div class="swiper-slide">
-            <blockquote>
-              “The coaches made learning addictive. My son now asks for extra problem sets!”
-              <cite>— Tanya M.</cite>
-            </blockquote>
-          </div>
+  <main>
+    <!-- HERO -->
+    <section id="hero" class="hero reveal">
+      <video class="hero-video" src="videos/hero.mp4" autoplay muted loop></video>
+      <div class="hero-inner container">
+        <h1 class="headline">
+          Unlock <span id="typewriter" class="gradient-text"></span>.
+        </h1>
+        <p class="subhead reveal">
+          Personalised tutoring & immersive courses for every grade and every goal.
+        </p>
+        <div class="cta-center">
+          <a href="services.html" class="btn primary">Browse Programs</a>
         </div>
-        <div class="swiper-pagination"></div>
       </div>
-      <div class="text-center" style="margin-top:2rem;">
-        <a href="stories.html" class="btn ghost">Read More Stories</a>
+    </section>
+
+    <!-- SERVICES OVERVIEW -->
+    <section id="services" class="hero-simple reveal">
+      <div class="container">
+        <h2 class="section-title">Our Services</h2>
+        <div class="grid cards reveal">
+          <!-- Example card -->
+          <div class="card pop">
+            <img src="images/testprep.png" alt="College Test Prep" />
+            <h3>College Test Prep</h3>
+            <p>Boost PSAT/SAT/ACT scores with experts.</p>
+          </div>
+          <!-- ...repeat for other cards... -->
+        </div>
+        <div class="cta-center">
+          <a href="services.html" class="btn primary">View All Programs</a>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact Preview -->
-  <section class="section text-center">
-    <div class="container">
-      <h2 class="section-title">Ready to Get Started?</h2>
-      <a href="contact.html" class="btn primary large">Contact Us</a>
-    </div>
-  </section>
+    <!-- IMPACT -->
+    <section id="impact" class="hero-simple reveal">
+      <div class="container">
+        <h2 class="section-title">Our Impact</h2>
+        <p class="subhead reveal">Numbers that speak to our commitment and results.</p>
+        <ul class="metrics metric-grid reveal">
+          <li><span data-count="780">0</span><small>Students Empowered</small></li>
+          <li><span data-count="172">0</span><small>Avg Score Increase (pts)</small></li>
+          <li><span data-count="1800">0</span><small>Sessions Delivered</small></li>
+        </ul>
+      </div>
+    </section>
 
-  <!-- Footer -->
+    <!-- STORIES -->
+    <section id="stories" class="hero-simple reveal">
+      <div class="container">
+        <h2 class="section-title">Parent Stories</h2>
+        <div id="testimonialSwiper" class="testimonials swiper reveal">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <blockquote>
+                “300-point SAT gain. Full-ride scholarship. Enough said.”
+                <cite>— Sonya K.</cite>
+              </blockquote>
+            </div>
+            <!-- ...other slides... -->
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="cta-center">
+          <a href="stories.html" class="btn primary">Read More Stories</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT PROMPT -->
+    <section id="contact" class="hero-simple reveal">
+      <div class="container narrow">
+        <h2 class="section-title">Ready to Get Started?</h2>
+        <div class="cta-center">
+          <a href="contact.html" class="btn primary">Contact Us</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© 2025 Activate Education. All rights reserved.</p>
+      <p>© 2025 ActivateEd</p>
       <ul class="socials">
-        <li><a href="#"><img src="images/X_logo.png"        alt="X (Twitter)"></a></li>
-        <li><a href="#"><img src="images/Facebook_Logo_(2019).png" alt="Facebook"></a></li>
-        <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
+        <li><a href="#"><img src="images/x-logo.png"         alt="X"></a></li>
+        <li><a href="#"><img src="images/facebook-logo.png"   alt="Facebook"></a></li>
+        <li><a href="#"><img src="images/instagram-icon.png"  alt="Instagram"></a></li>
       </ul>
     </div>
   </footer>
 
-  <!-- Back-to-Top -->
-  <button id="toTop" aria-label="Back to top">↑</button>
-
-  <!-- Vendor JS -->
+  <!-- SCRIPTS -->
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/TextPlugin.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/TextPlugin.min.js"></script>      <!-- NEW -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script> <!-- NEW -->
-
-  <!-- Main JS -->
   <script src="script.js"></script>
 </body>
 </html>
